tests/invalid/invalid-023.inox
Module Invalid023

Sum(A Integer, B Integer) Integer :
    Return A + B
;

Main() :
    Sum(1, "abc")
;
